kubernetes-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  namespace: node-app
spec:
  selector:
    matchLabels:
      app: my-node-app
  replicas: 1
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
        - name: my-node-app
          image: public.ecr.aws/o2z2k3q3/node-app:latest
          ports:
            - containerPort: 8080
