kubernetes-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app
  namespace: node-app
  labels:
    app: my-node-app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort
  selector:
    app: my-node-app
