kubernetes-files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-node-app-ingress
  namespace: node-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:093916049614:certificate/34a28ce0-bd2f-4a2a-af8d-38ca203453ce
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/successCodes: "200"
  labels:
    app: my-node-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: my-node-app
              servicePort: 8080
